# space-invaders

./: CMakeLists.txt  game
include/: Game.hpp
src/: Game.cpp  main.cpp  main_sfml.cpp
tests/: test_game.cpp
